# gitsynth

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
docs/: domain.md
gitsynth/: __init__.py  cli.py  utils.py
gitsynth/core/: __init__.py  agent.ipynb  agent_with_functions.py  commit_agent.py  commit_types.py  fnollama.ipynb  git.py  llm.py  ollama_handler.py
gitsynth/tests/: __init__.py  conftest.py  test_cli.py  test_git.py  test_llm.py  test_llm_handler.py
reports/: report.html  test_log.jsonl
scripts/: watch_tests.py
